<resources>
    <string name="app_name">AR4all</string>
    <string name="login">Log In</string>
    <string name="email">Email Id</string>
    <string name="password">Password</string>
    <string name="log_button">Log In</string>
    <string name="new_user">New User? Register</string>
    <string name="register">Register</string>
    <string name="username">User Name</string>
    <string name="phonenumber">Phone Number</string>
    <string name="password_renter">Renter Password</string>
    <string name="reg_button">Register</string>
    <string-array name="features">
        <item>Upload</item>
        <item>Scan</item>
        <item>About Us</item>
    </string-array>
    <string name="title_activity_drawer">Dashboard</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_test">test</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_preview">PreviewActivity</string>


</resources>
