<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/log_in"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:text="@string/login"/>
    <TextView
        android:id="@+id/email_id"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/log_in"
        android:layout_marginTop="20dp"
        android:text="@string/email"
        android:layout_marginLeft="10dip"/>
    <EditText
        android:id="@+id/emailid_text"
        android:layout_below="@id/email_id"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="textEmailAddress"
        android:layout_marginTop="2dip"
        android:maxLines="1"/>
    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailid_text"
        android:layout_marginTop="10dip"
        android:layout_marginLeft="10dip"
        android:text="@string/password"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password_text"
        android:maxLines="1"
        android:inputType="textPassword"
        android:layout_below="@id/password"
        android:layout_marginTop="2dip"/>
    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/password_text"
        android:text="@string/log_button"
        android:onClick="goToMain"/>
    <TextView
        android:id="@+id/newuser_reg"
        android:layout_marginTop="40dp"
        android:layout_below="@id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:textColor="@color/newReg"
        android:text="@string/new_user"
        android:onClick="goToReg"
        android:clickable="true"/>
</RelativeLayout>
